# dogs_cats

./: Lista_1_de_Programação_II.ipynb  README.md  db.json  db.sqlite3  package-lock.json  pyproject.toml  render.yaml  render2.yaml  requirements.txt  requirements2.txt  whole.json
adotar/: models.py  urls.py  views.py
adotar/migrations/: 0001_initial.py
adotar/templates/: bug.html  listar_pets.html
adote/: settings.py  urls.py  views.py
adote/templates/: index.html
divulgar/: admin.py  forms.py  models.py  urls.py  views.py
divulgar/migrations/: 0001_initial.py  0002_tag.py  0003_pet.py  0004_alter_pet_status.py  0005_alter_pet_foto.py  0006_sexo.py  0007_pet_sexo.py  0008_porte.py  0009_pet_porte.py  0010_animal.py  0011_pet_animal.py  0012_raca_animal.py
divulgar/templates/: dashboard.html  edit_pet.html  novo_pet.html  seus_pets.html  ver_pedido_adocao.html  ver_pet.html
dog_cat/: asgi.py  settings.py  urls.py  wsgi.py
static/adote/css/: adote.css
static/adote/js/: index.js
static/divulgar/css/: novo_pet.css  seus_pet.css
templates/static/adotar/css/: listar_pets.css
templates/static/adotar/img/: dogerro.avif
templates/static/adotar/js/: index.js
templates/static/adote/css/: adote.css
templates/static/divulgar/css/: novo_pet.css  seus_pet.css
templates/static/usuarios/css/: cadastro.css
usuarios/: models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py
usuarios/templates/: cadastro.html  login.html
