[tool.poetry]
name = "dog-cat"
version = "0.1.0"
description = ""
authors = ["isabella pila <isabellapilasilva@gmail.com>"]
readme = "README.md"
packages = [{include = "dog_cat"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
